--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -135,22 +135,12 @@
 <h2> But how we can do anything without thinking..</h2>
 <audio src="INZO - Overthinker.mp3" controls>
 </audio>
-</section>/*
+</section>
+
 <section class="product-card">
 <h2>I think...</h2>
  <div class="product-card">
-<iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-        </div> 
-<div class="product-card">
-<iframe width="100%" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-        </div>
-   <div class="product-card">
-     <div class="product-card">
-<iframe width="100%" height="auto" src="MP4_20240529_004004VLOG.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-        </div>
-   <div class="product-card">
-<iframe width="100%" height="auto" src="VID-20240308-WA0022.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-        </div>*/
+<iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 <div class="product-card">
 <form  action="https://getform.io/f/lakmzeda" method="POST"> 
@@ -160,7 +150,6 @@
   <input class="product-card" style="border: 1px;" type="text" id="uname" 
          name="uname" placeholder="Enter your name" required> 
 <br>
-
       Email Address 
   </label> 
   <input class="product-card" style="border: 1px;" type="email" id="email" 
