--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -83,6 +83,57 @@
   color: white;
 }
 </style>
+  <style>
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1; /* Place the video behind other elements */
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(106, 143, 199, 0.5); /* Semi-transparent background */
+  width: 100%;
+  height: 10%
+  padding: 20px;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #c06d9d;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  color: rgb(119, 30, 179);
+}
+</style>
+  <script>
+// Get the video
+var video = document.getElementById("myVideo");
+
+// Get the button
+var btn = document.getElementById("myBtn");
+function myFunction() {
+  if (video.paused) {
+    video.play();
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+  }
+}
+  </script>
 <script>
     function myFunction() {
   var x = document.getElementById("myLinks");
@@ -95,6 +146,15 @@
 </script>
 </head>
 <body class="product-card">
+  <video autoplay muted loop id="myVideo">
+  <source src="9669111-hd_1080_1920_25fps.mp4" type="video/mp4">
+</video>
+
+<div class="content">
+  <h1><marquee direction="up">Trust me you are Alien</marquee></h1>
+  <p><footer > &copy; by eScaPed alien fr0m aRea 51</footer></p>
+  <button id="myBtn" onclick="myFunction()">Pause</button>
+</div>
   <div class="product-card">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="topnav">
