--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -143,20 +143,28 @@ function myFunction() {
 }
 </script>
 </head>
+
 <body class="product-card">
+
   <video autoplay muted loop id="myVideo">
+
   <source src="9669111-hd_1080_1920_25fps.mp4" type="video/mp4">
+
 </video>
 
 <div class="content">
+
   <h1><marquee direction="up">Trust me you are Alien</marquee></h1>
-  <p><footer > &copy; by eScaPed alien fr0m aRea 51</footer></p>
+
+  <p>
+<footer > &copy; by eScaPed alien fr0m aRea 51</footer>
+</p>
+
   <button id="myBtn" onclick="myFunction()">Pause</button>
 </div>
-  <div class="product-card">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <div class="topnav">
+  <div class="topnav">
      <a href="https://patanhihaikonhu.github.io/We_Are_Alien/" class="product-card">Home</a>
+
       <div id="myLinks">
         <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJnBrNvfETvfFllQQOiJOvzu&si=yrV0U31e0KIQn5nK">Playlist 1</a>
         <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJn_j_eF1XqjOJFda1DoulQV&si=_U8B3jd45kcWsbXX">playlist 2</a>
@@ -167,13 +175,19 @@ function myFunction() {
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </div>
-  </div>
+    </div>
 <header class="product-card">
-<center><h1>🌷Welcome🌷</h1></center></center>
-  <div class="product-card"><iframe width="100%" height="auto" src="https://www.youtube.com/embed/xh6judJ8IxU" title="OST《陈情令 The Untamed》 | 《无羁》 Wu Ji (2020 Special Ver) by Xiao Zhan &amp; Wang Yibo【MULTI SUB】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<center><h1>🌷Welcome🌷</h1></center></center>
+
+  <div class="product-card">
+<iframe width="100%" height="auto" src="https://www.youtube.com/embed/xh6judJ8IxU" title="OST《陈情令 The Untamed》 | 《无羁》 Wu Ji (2020 Special Ver) by Xiao Zhan &amp; Wang Yibo【MULTI SUB】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
+</div>
+
 <div class="product-card">
-  <iframe width="100%" height="auto" src="《 The Untamed》【BTS】——The most cute paper man in the world.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+ 
+ <iframe width="100%" height="auto" src="《 The Untamed》【BTS】——The most cute paper man in the world.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>  
 </div>
 </div>
 </header> 
