--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -182,17 +182,16 @@ if (x.style.display === "block") {
             <input type="radio" id="no" 
                    name="satisfy" value="no"> 
             <label for="no">No</label> 
-        </div> 
-        <label for="msg"> 
+             <label for="msg"> 
             Write your Suggestions : 
         </label> 
-        <textarea style="background-color: unset;">
-        </textarea>
-        <br>
+        <textarea class="pro" style="background-color: unset;">
+        </textarea> <br>
        <label class="pro" >
           <input style="background-color: unset;" type="submit">
         </label>
       </form>
+        </div> 
       <hr>
 </div>
       <footer style="text-align: center;" class="product-card"> &copy; by eScaPed alien fr0m aRea 51</footer>
