--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -182,11 +182,10 @@ if (x.style.display === "block") {
             <input type="radio" id="no" 
                    name="satisfy" value="no"> 
             <label for="no">No</label> 
-             <label for="msg"> 
+             <label> 
             Write your Suggestions : 
-        </label> 
-        <textarea class="pro" style="background-color: unset;">
-        </textarea> <br>
+        <textarea for="msg" class="pro" style="background-color: unset;">
+        </textarea></label> <br>
        <label class="pro" >
           <input style="background-color: unset;" type="submit">
         </label>
