--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -184,7 +184,7 @@ if (x.style.display === "block") {
             <label for="no">No</label> 
              <label> 
             Write your Suggestions : 
-        <textarea for="msg" class="pro" style="background-color: unset;">
+        <textarea class="pro" id="msg" name="msg" class="pro" style="background-color: unset;" required>
         </textarea></label> <br>
        <label class="pro" >
           <input style="background-color: unset;" type="submit">
