--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +40,7 @@
     background: rgba(106, 143, 199, 0.5); /* Semi-transparent background */
     width: 100%;
     height: 10%
-    padding: 20px;
+    padding 20px;
   }
   
   /* Style the button used to pause/play the video */
@@ -76,10 +77,6 @@
   position: absolute;
   right: 0;
   top: 0;
-}
-.topnav a:hover {
-}
-.active {
 }
   </style>
 <script>
@@ -143,6 +140,9 @@ if (x.style.display === "block") {
   <div class="product-card">
   <blockquote>"Believe you can and you're halfway there." - Theodore Roosevelt</blockquote>
   </div>
+  <div class="product-card">
+    <blockquote>"Love is all that we need...not by anyone,not for anyone,just in us like it is what we are made of." - Priyanka Basera</blockquote>
+    </div>
   </section>
   <section class="product-card"><h2> But how we can do anything without thinking..</h2>
     <center>
