--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,6 +6,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🌷Welcome🌷</title>
 <style>
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+</style>
+<style>
    .product-card {
       margin-bottom: 40px;
       flex: 0 1 calc(25% - 1em);
@@ -80,6 +120,30 @@
 }
   </style>
 <script>
+  // Get the modal
+  var modal = document.getElementById("myModal");
+  
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
+  
+  // When the page loads, open the modal 
+  window.onload = function() {
+      modal.style.display = "block";
+  }
+  
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+      modal.style.display = "none";
+  }
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+      if (event.target == modal) {
+          modal.style.display = "none";
+      }
+  }
+</script>
+<script>
 var video = document.getElementById("myVideo");
 
 // Get the button
@@ -105,6 +169,16 @@ if (x.style.display === "block") {
 }
 </script>
 <body>
+
+  
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Welcome back! You just reloaded the page.</p>
+    </div>
+  </div>
+
+
   <video autoplay muted loop id="myVideo"><source src="9669111-hd_1080_1920_25fps.mp4" type="video/mp4"></video>
   <div class="topnav">
     <a href="https://patanhihaikonhu.github.io/We_Are_Alien/" class="product-card">Home</a>
@@ -194,4 +268,4 @@ if (x.style.display === "block") {
       <hr>
 </div>
       <footer style="text-align: center;" class="product-card"> &copy; by eScaPed alien fr0m aRea 51</footer>
-</body>
+    </body>
