--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -225,7 +225,7 @@ if (x.style.display === "block") {
     </section>
     <section class="product-card">
       <h2>I think...</h2>
-      <iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4" title="unknown" frameborder="0" ></iframe>
       </section>
       <div class="pro">
       <form  action="https://formbold.com/s/9R7GG" method="POST"> 
