--- a/AlienTube.html
+++ b/AlienTube.html
@@ -97,10 +97,9 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="video-container">
             <div class="video">
                 <video controls>
-                    <source src="video1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+                    <source src="VID-20240629-WA0001.mp4" type="video/mp4">
                 </video>
-                <p>Video Title 1</p>
+                <p>Exam days</p>
             </div>
             <div class="video">
                 <video controls>
