--- a/AlienTube.html
+++ b/AlienTube.html
@@ -90,8 +90,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </head>
 <body>
     <header>
-        <h1>YouTube Clone</h1>
-        <input type="text" placeholder="Search...">
+        <centre><h1>AlienTube</h1></centre>
     </header>
     <main>
         <div class="video-container">
@@ -103,8 +102,7 @@ document.addEventListener('DOMContentLoaded', () => {
             </div>
             <div class="video">
                 <video controls>
-                    <source src="video2.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+                    <source src="" type="video/mp4">
                 </video>
                 <p>Video Title 2</p>
             </div>
