--- a/AlienTube.html
+++ b/AlienTube.html
@@ -104,19 +104,19 @@ document.addEventListener('DOMContentLoaded', () => {
                 <video controls>
                     <source src="VID-20240429-WA0000.mp4" type="video/mp4">
                 </video>
-                <p>Video Title</p>
+                <p>The Singer</p>
             </div>
                       <div class="video">
                 <video controls>
                     <source src="VID-20240308-WA0022.mp4" type="video/mp4">
                 </video>
-                <p>Video Title</p>
+                <p>Day-Dreamer</p>
                       </div>  
                       <div class="video">
                 <video controls>
                     <source src="MP4_20240529_004004VLOG.mp4" type="video/mp4">
                 </video>
-                <p>Video Title</p>
+                <p>No words</p>
                       </div>
         </div>
     </main>
