--- a/README.html
+++ b/README.html
@@ -135,8 +135,7 @@ function myFunction() {
     <div class="product-card">
       <h1><marquee style="text-align: center;" direction="up">Trust me you are Alien</marquee></h1>
       <p><footer style="text-align: center;" > &copy; by eScaPed alien fr0m aRea 51</footer></p>
-      <center><button  id="myBtn" onclick="myFunction()">Pause</button>
-    </center></div>
+      </div>
   </div>
 </footer>
 </body>
