--- a/AlienTube.html
+++ b/AlienTube.html
@@ -56,7 +56,7 @@ video {
 </head>
 <body>
     <header>
-        <centre><h1>AlienTube</h1></centre>
+        <centre><a href="README.html"><h1>AlienTube</h1><a></centre>
     </header>
     <main>
         <div class="video-container">
