--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -89,12 +89,12 @@
     font-size: 10px;
     padding: 10px;
     border: none;
-    background: #c06d9d;
+    background:unset;
     cursor: pointer;
   }
   
   #myBtn:hover {
-    color: rgb(119, 30, 179);
+    color: purple;
   }
   </style>
   <style>
@@ -113,7 +113,7 @@
 }
 .topnav .icon {
   display: block;
-  background-color: #cf78b5;
+  background-color:unset;
   position: absolute;
   right: 0;
   top: 0;
@@ -169,29 +169,17 @@ if (x.style.display === "block") {
 }
 </script>
 <body>
-
-  
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>Welcome back! You just reloaded the page.</p>
-    </div>
-  </div>
-
-
   <video autoplay muted loop id="myVideo"><source src="9669111-hd_1080_1920_25fps.mp4" type="video/mp4"></video>
   <div class="topnav">
     <a href="https://patanhihaikonhu.github.io/We_Are_Alien/" class="product-card">Home</a>
 
      <div id="myLinks">
-       <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJnBrNvfETvfFllQQOiJOvzu&si=yrV0U31e0KIQn5nK">Playlist 1</a>
-       <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJn_j_eF1XqjOJFda1DoulQV&si=_U8B3jd45kcWsbXX">playlist 2</a>
        <a href="AlienTube.html">AlienTube</a>
        <a href="mailto:deependrayad2@gmail.com">Contact</a>
        <a href="#about">About: I am an Alien</a>
      </div>
      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-       <i class="fa fa-bars"></i>
+       <text class="fa fa-bars">⟭⟬</text>
      </a>
    </div>
     <center><h1>🌷Welcome🌷</h1></center></center>
