--- a/AlienTube.html
+++ b/AlienTube.html
@@ -73,7 +73,7 @@ function myFunction() {
 </head>
 <body  oncontextmenu="return false;">
     <header>
-        <centre><a href="README.html"><h1>AlienTube</h1><a></centre>
+        <centre><h1>AlienTube</h1></centre>
     </header>
     <main>
         <div class="video-container">
