--- a/AlienTube.html
+++ b/AlienTube.html
@@ -74,6 +74,7 @@ function myFunction() {
 <body  oncontextmenu="return false;">
     <header>
         <centre><h1>AlienTube</h1></centre>
+        <button id="myBtn"></button>
     </header>
     <main>
         <div class="video-container">
