--- a/AlienTube.html
+++ b/AlienTube.html
@@ -107,9 +107,8 @@ function myFunction() {
 </script>
 </head>
 <body  oncontextmenu="return false;">
-    <header>
-        <centre><h1>AlienTube</h1></centre>
-        <button id="myBtn"></button>
+    <header id ="myBtn">
+        <a href="myBtn" id ="myBtn'><h1>AlienTube</h1></a>
     </header>
     <main>
         <div class="video-container">
