--- a/AlienTube.html
+++ b/AlienTube.html
@@ -108,7 +108,7 @@ function myFunction() {
 </head>
 <body  oncontextmenu="return false;">
     <header id ="myBtn">
-        <a href="myBtn" id ="myBtn'><h1>AlienTube</h1></a>
+        <h1 id="myBtn">AlienTube</h1>
     </header>
     <main>
         <div class="video-container">
