--- a/AlienTube.html
+++ b/AlienTube.html
@@ -108,7 +108,7 @@ function myFunction() {
 </head>
 <body  oncontextmenu="return false;">
     <header id ="myBtn">
-        <h1 id="myBtn">AlienTube</h1>
+        <center><h1>AlienTube</h1></center>
     </header>
     <main>
         <div class="video-container">
