--- a/AlienTube.html
+++ b/AlienTube.html
@@ -105,7 +105,7 @@ function myFunction() {
 </script>
 </head>
 <body  oncontextmenu="return false;">
-    <header id ="myBtn">
+    <header>
         <center><h1>AlienTube</h1></center>
     </header>
     <main>
