--- a/AlienTube.html
+++ b/AlienTube.html
@@ -7,23 +7,11 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color:unset;
 }
-
 header {
-    background-color:unset;
-    padding: 10px;
-    display: flex;
-    align-items: center;
+text-align: center;
 }
-
-header input {
-    padding: 5px;
-    font-size: 16px;
-}
-
 main {
     padding: 20px;
 }
