--- a/AlienTube.html
+++ b/AlienTube.html
@@ -6,13 +6,15 @@
     <title>AlienTube</title>
 <style>
 body {
-    font-family: Arial, sans-serif;}
+    font-family: Arial, sans-serif;
+    background-color:black;
+    color: rgb(159, 38, 184);
+}
 header {
-    text-color:lavender;
 text-align: center;
 }
 main {
-    padding: 20px;
+    padding: 5px;
 }
 
 .video-container {
@@ -23,10 +25,7 @@ main {
 
 .video {
     background-color: unset;
-    padding: 10px;
-    border: 1px solid purple;
-    border-radius: 5px;
-    width: 300px;
+    padding: 15px;
 }
 
 video {
@@ -118,7 +117,5 @@ function myFunction() {
         </div>
     </main>
 </body>
-            <video autoplay muted loop id="myVideo">
-  <source src="42197-429661458_medium.mp4" type="video/mp4">
             </video>
 </html>
