--- a/AlienTube.html
+++ b/AlienTube.html
@@ -95,7 +95,7 @@ function myFunction() {
                     <source src="VID-20240629-WA0001.mp4" type="video/mp4">
                 </video>
                 <p>Exam days</p>
-                <form https://formbold.com/s/9R7GG" method="POST">
+                <form action="https://formbold.com/s/9R7GG" method="POST">
 <div>
 <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
 Hey... say something!
