--- a/AlienTube.html
+++ b/AlienTube.html
@@ -10,7 +10,8 @@ body {
     color: rgb(159, 38, 184);
 }
 header {
-text-align: center;
+text-align:justify;
+    
 }
 main {
     padding: 5px;
@@ -128,7 +129,7 @@ submit.onclick = function(event){
 </head>
 <body  oncontextmenu="return false;">
     <header>
-        <center><h1>AlienTube</h1></center>
+        <h1>AlienTube</h1>
     </header>
     <main>
         <div class="video-container">
