--- a/AlienTube.html
+++ b/AlienTube.html
@@ -160,6 +160,6 @@ submit.onclick = function(event){
                       </div>
         </div>
     </main>
+    <center>&copy; by 👽</center>
 </body>
-            </video>
 </html>
