--- a/AlienTube.html
+++ b/AlienTube.html
@@ -132,6 +132,7 @@ submit.onclick = function(event){
         <h1>AlienTube</h1>
     </header>
     <main>
+        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:auto;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x8stc8k?autoplay=1" width="100%" height="auto" allowfullscreen title="Dailymotion Video Player" allow="autoplay; web-share"> </iframe> </div>
         <div class="video-container">
             <div class="video">
                 <video controls controlsList="nodownload">
