--- a/AlienTube.html
+++ b/AlienTube.html
@@ -20,119 +20,26 @@ main {
 .video-container {
     display: flex;
     flex-wrap: wrap;
+    color: rgb(159, 38, 184);
     gap: 20px;
 }
 
 .video {
-    background-color: unset;
+    color: rgb(159, 38, 184);
     padding: 15px;
 }
 
 video {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 </style>
-    <style>
-  #myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-    .content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(106, 143, 199, 0.5); /* Semi-transparent background */
-    width: 100%;
-    height: 10%
-    padding 20px;
-  }
-    #myBtn {
-    width:100px;
-    font-size: 10px;
-    padding: 10px;
-    border: none;
-    background:unset;
-    cursor: pointer;
-  }  
-  #myBtn:hover {
-    color: purple;
-  }
-    </style>
-<script>
-       document.oncontextmenu = document.body.oncontextmenu = function() {
-    return false;
-}; 
-</script>
-    <script>
-// Get the video
-var video = document.getElementById("myVideo");
-
-// Get the button
-var btn = document.getElementById("myBtn");
-function myFunction() {
-  if (video.paused) {
-    video.play();
-    btn.innerHTML = "Pause";
-  } else {
-    video.pause();
-    btn.innerHTML = "Play";
-  }
-}
-</script>
-    <script>
-        const field = document.querySelector('textarea');
-const backUp = field.getAttribute('placeholder')
-const btn = document.querySelector('.btn');
-const clear = document.getElementById('clear')
-const submit = document.querySelector('#submit')
-// const comments = document.querySelector('#comment-box')
-const comments = document.getElementById('comment-box');
-
-// array to store the comments
-const comments_arr = [];
-
-// to generate html list based on comments array
-const display_comments = () => {
-  let list = '<ul>';
-   comments_arr.forEach(comment => {
-    list += `<li>${comment}</li>`;
-  })
-  list += '</ul>';
-  comments.innerHTML = list;
-}
-
-clear.onclick = function(event){
-  event.preventDefault();
-  // reset the array  
-   comments_arr.length = 0;
-  // re-genrate the comment html list
-  display_comments();
-}
-
-submit.onclick = function(event){
-    event.preventDefault();
-    const content = field.value;
-    if(content.length > 0){ // if there is content
-      // add the comment to the array
-      comments_arr.push(content);
-      // re-genrate the comment html list
-      display_comments();
-      // reset the textArea content 
-      field.value = '';
-    }
-}
-    </script>
 </head>
 <body  oncontextmenu="return false;">
     <header>
         <h1>AlienTube</h1>
     </header>
     <main>
-        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:auto;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x8stc8k?autoplay=1" width="100%" height="auto" allowfullscreen title="Dailymotion Video Player" allow="autoplay; web-share"> </iframe> </div>
         <div class="video-container">
             <div class="video">
                 <video controls controlsList="nodownload">
