--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -171,8 +171,9 @@ if (x.style.display === "block") {
 <body>
   <video autoplay muted loop id="myVideo"><source src="9669111-hd_1080_1920_25fps.mp4" type="video/mp4"></video>
   <div class="topnav">
+          <div class="topnav">
     <a href="https://patanhihaikonhu.github.io/We_Are_Alien/" class="product-card">Home</a>
-
+          </div>
      <div id="myLinks">
        <a href="AlienTube.html">AlienTube</a>
        <a href="mailto:deependrayad2@gmail.com">Contact</a>
