--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -89,7 +89,7 @@
     font-size: 10px;
     padding: 10px;
     border: none;
-    background:unset;
+    background:purple;
     cursor: pointer;
   }
   
@@ -113,7 +113,7 @@
 }
 .topnav .icon {
   display: block;
-  background-color:unset;
+  background-color:lavender;
   position: absolute;
   right: 0;
   top: 0;
