--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -58,7 +58,7 @@
   .pro{
     padding:auto;
     margin-bottom: 20px;
-    background-color: unset;
+    background-color:#F0FFF0;
     text-align: center;
   }
 </style>
@@ -185,13 +185,6 @@ if (x.style.display === "block") {
    </div>
     <center><h1>🌷Welcome🌷</h1></center></center>
     <div class="product-card">
-<iframe width="100%" height="auto" src="https://www.youtube.com/embed/xh6judJ8IxU" title="OST《陈情令 The Untamed》 | 《无羁》 Wu Ji (2020 Special Ver) by Xiao Zhan &amp; Wang Yibo【MULTI SUB】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</iframe>
-</div>
-<div class="product-card">
- 
-  <iframe width="100%" height="auto" src="《 The Untamed》【BTS】——The most cute paper man in the world.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
- </iframe>  
 </div>
 <section>
   <div class="product-card">
@@ -212,10 +205,6 @@ if (x.style.display === "block") {
     <audio src="INZO - Overthinker.mp3" controls>
     </audio></center>
     </section>
-    <section class="product-card">
-      <h2>I think...</h2>
-      <iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4" title="unknown" frameborder="0" ></iframe>
-      </section>
       <div class="pro">
       <form  action="https://formbold.com/s/9R7GG" method="POST"> 
         <label for="uname">  
@@ -247,10 +236,10 @@ if (x.style.display === "block") {
             <label for="no">No</label> 
              <label> 
             Write your Suggestions : 
-        <textarea class="pro" id="msg" name="msg" class="pro" style="background-color: unset;" required>
+        <textarea class="pro" id="msg" name="msg" class="pro" style="background-color: #FFEFD5;" required>
         </textarea></label> <br>
        <label class="pro" >
-          <input style="background-color: unset;" type="submit">
+          <input style="background-color: lavender;" type="submit">
         </label>
       </form>
         </div> 
